# power-menu-gtk

./: Cargo.toml  LICENSE  README.md
src/: main.rs
